k8s/echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
    - hosts:
        - echo.example.com
      secretName: quickstart-example-tls
  rules:
    - host: echo.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kuard
              servicePort: 80
